<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="16dp">

    <TextView
        android:id="@+id/register_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/register_title"
        android:textColor="#9E9E9E" android:textSize="24sp"/>

    <EditText
        android:id="@+id/register_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/register_title"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:hint="@string/register_email_hint" android:inputType="textEmailAddress" android:minHeight="48dp"
        android:textColorHint="#FFAB91"/>

    <EditText
        android:id="@+id/register_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/register_email"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:hint="@string/register_password_hint" android:inputType="textPassword" android:minHeight="48dp"
        android:textColorHint="#FFAB91"/>

    <Button
        android:id="@+id/register_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/register_password"
        android:layout_marginTop="16dp"
        android:text="@string/register_button_text" />

</RelativeLayout>
